# hipython

./: .gitignore  README.md  pyproject.toml
hipython/: __init__.py  hipython.py
hipython/lessons/: basics.json  conditionals.json  datatypes.json  exceptions.json  functions.json  lesson.json  loops.json
