[tool.poetry]
name = "hipython"
version = "0.1.0"
description = ""
authors = ["rmgpanw <rmgpanw@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.include]
"hipython/lessons/*.json" = "hipython/lessons/*.json"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"