[tool.poetry]
name = "hipython"
version = "0.1.0"
description = ""
authors = ["rmgpanw <rmgpanw@ucl.ac.uk>"]
readme = "README.md"

# Include all JSON files in the lessons folder
include = [
    "hipython/lessons/*.json"
]

[tool.poetry.dependencies]
python = "^3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"